--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "vite",
         "dev_hp": "vite --host 192.168.1.13 --port 8800",
         "dev_ums": "vite --host 192.168.124.118 --port 8800",
+        "test": "vite --host 192.168.1.94 --port 8800",
         "build": "vite build"
     },
     "devDependencies": {
