--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "whatsapp-web.js": "^1.26.0"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.21.2"
     }
 }
